@@ -282,6 +282,14 @@ TEMP_POWERPC_INITRD
 
 Other useful variables for configuration snippets:
 
+SUBARCH_SUPPORTED_EXTRA
+MEDIUM_SUPPORTED_EXTRA
+FLAVOUR_SUPPORTED_EXTRA
+  These are like SUBARCH_SUPPORTED (etc.), except that they are not built by
+  default with 'make all_build' but are only used when selected manually,
+  either by passing an explicit target to make or by defining RECURSE_EXTRA
+  to a non-empty value.
+
 EXTRANAME
   This allows to vary the name of the dest/ target a bit. Example:
   EXTRANAME = $(MEDIUM)/    leads to: floppy/netboot.img
