@@ -1,4 +1,5 @@
-MEDIUM_SUPPORTED = cdrom netboot netboot-gtk hd-media #monolithic
+MEDIUM_SUPPORTED = cdrom netboot netboot-gtk hd-media
+MEDIUM_SUPPORTED_EXTRA = monolithic
 
 # The version of the kernel to use.
 KERNELVERSION = 2.6.26-1-amd64
