@@ -1,4 +1,5 @@
-MEDIUM_SUPPORTED = cdrom netboot netboot-gtk hd-media # floppy monolithic
+MEDIUM_SUPPORTED = cdrom netboot netboot-gtk hd-media # floppy
+MEDIUM_SUPPORTED_EXTRA = monolithic
 
 # The version of the kernel to use.
 KERNELVERSION = $(BASEVERSION)-powerpc
